--- a/scss/components/_grid.scss
+++ b/scss/components/_grid.scss
@@ -25,7 +25,7 @@
   }
   
   .theme.col-2 {
-    background-color: #fd7856;
+    background-color: color-background-4;
   }
   
   .theme.col-3 {
@@ -57,7 +57,7 @@
   }
   
   .theme.col-10 {
-    background-color: #63cc82;
+    background-color: $color-background-3;
   }
   
   .theme.col-11 {
