--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -21,10 +21,10 @@
   }
   
   .error {
-    background-color: #e4757a;
+    background-color: $color-background-2;
     transition-duration: 1s;
     &:hover {
-      background-color: lighten(#e4757a, 15%);
+      background-color: $color-background-2-light;
     }
   }
   
@@ -37,18 +37,18 @@
   }
   
   .success {
-    background-color: #63cc82;
+    background-color: $color-background-3;
     transition-duration: 1s;
     &:hover {
-      background-color: lighten(#63cc82, 15%);
+      background-color: $color-background-3-light;
     }
   }
   
   .warning {
-    background-color: #fd7856;
+    background-color: $color-background-4;
     transition-duration: 1s;
     &:hover {
-      background-color: lighten(#fd7856, 15%);
+      background-color: $color-background-4-light;
     }
   }
   
